--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
-.App {
+.boxDesign{
+  margin-top: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+.contentStyling{
+  margin-left: 300px;
+  margin-right: 300px;
+}
+.flipCard{
+height: 180px;
+text-align: center;
+font-size: larger;
+font-weight: bolder;
+}
+.dataStyling{
+  margin-top: 80px;
+}
+.pStyling{
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-size: larger;
+  font-weight: bolder;
+  margin-top: 10px;
 }
